Issue #3116377 Autocomplete in views exposed filter is misaligned

--- a/core/themes/claro/css/components/views-exposed-form.css
+++ b/core/themes/claro/css/components/views-exposed-form.css
@@ -27,7 +27,7 @@
 .views-exposed-form.views-exposed-form {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: end;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   padding: 0.5rem 1.5rem 1.5rem 1.5rem;
@@ -60,6 +60,7 @@
 }
 
 .views-exposed-form__item--actions.views-exposed-form__item--actions .button {
+  margin-top: 0;
   margin-bottom: 0;
 }
 
@@ -69,4 +70,14 @@
 
 [dir="rtl"] .views-exposed-form__item--actions.views-exposed-form__item--actions:last-child {
   margin-left: 0;
+}
+
+.views-exposed-form .claro-autocomplete {
+  display: block;
+}
+
+.views-exposed-form .form-item--no-label,
+.views-exposed-form__item.views-exposed-form__item.views-exposed-form__item--actions {
+  /* Line height of a label + existing margin for the element + margin for label */
+  margin-top: 2.375rem;
 }
